@@ -21,8 +21,7 @@ import java.nio.file.Paths;
 import java.util.function.Supplier;
 
 public class Application {
-    //static String baseUrl="E:\\nieyue\\IntelliJIDE\\work\\Mybt\\src\\main\\resources";
-    static String baseUrl = "E:\\nieyue\\ide\\Mybt\\src\\main\\resources";
+    static String baseUrl = "src/main/resources";
     //私有运行时的客户端
     public static void self(){
 
@@ -34,7 +33,7 @@ public class Application {
             }
         };
 
-       // config.setAcceptorPort(6899);
+        config.setAcceptorPort(6899);
         // enable bootstrapping from public routers
         Module dhtModule = new DHTModule(new DHTConfig() {
             @Override
@@ -44,13 +43,13 @@ public class Application {
         });
 
         //Path targetDirectory = Paths.get(System.getProperty("user.home"), "Downloads");
-        Path targetDirectory = Paths.get(baseUrl+"\\video\\1.mp4");
+       // Path targetDirectory = Paths.get(baseUrl+"/video/1.mp4");
+        Path targetDirectory = Paths.get(baseUrl+"/video");
         Storage storage = new FileSystemStorage(targetDirectory);
         URL url = null;
         try {
              //url=new URL("https://tbm-auth.alicdn.com/e99361edd833010b/IVDv9na5AeqibRSfuOP/gWmhp0e8gzFNFFM5q8J_251309133700_hd_hq.mp4?auth_key=1588749222-0-0-3d44ba0ff40b71d3f919f2c7e2efd3c0");
-            // url=new URL("file:///E:\\nieyue\\ide\\bt\\bt-cli\\a.torrent");
-            url=new File(baseUrl+"\\torrent\\1.torrent").toURI().toURL();
+            url=new File(baseUrl+"/torrent/1.torrent").toURI().toURL();
         } catch (MalformedURLException e) {
             e.printStackTrace();
         }
